--- a/week10.html
+++ b/week10.html
@@ -52,8 +52,44 @@
         <h1 class="page_title">Audio Similarity & Transcription</h1>
         <h2 class="page_subtitle">Week 10</h2>
 
-        <h2>Introduction</h2>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Delectus expedita sunt pariatur! Fuga maxime molestiae qui ipsam nisi. Iste fuga dicta dignissimos ut quia, blanditiis alias error sapiente reiciendis libero.</p>
+        <h2>Calculating Similarity</h2>
+        <p class="task">Extracte the Chroma features in SonicVisualizer and generate a similarity matrix.</p>
+
+        <h3>Chroma Features</h3>
+        <p>Dover Quartet: (download CSV <a href="portfolio_assets/week-10/chroma/dover_chromagram.csv" download>here</a>):</p>
+        <img src="portfolio_assets/week-10/chroma/dover_chromagram.png" width="90%">
+        <p>Emerson Quartet: (download CSV <a href="portfolio_assets/week-10/chroma/emerson_chromagram.csv" download>here</a>):</p>
+        <img src="portfolio_assets/week-10/chroma/emerson_chromagram.png" width="90%">
+        <p>Menuhin Competition: (download CSV <a href="portfolio_assets/week-10/chroma/menuhin_chromagram.csv" download>here</a>):</p>
+        <img src="portfolio_assets/week-10/chroma/menuhin_chromagram.png" width="90%">
+
+        <h3>Visualisations</h3>
+        <p>Similarity matrices of C&apos;s & A&apos;s (left) & of all notes (right):</p>
+        <img src="portfolio_assets/week-10/visualisations/similarity_matrix_c_and_a.png" width="40%"><img src="portfolio_assets/week-10/visualisations/similarity_matrix_all.png" width="40%">
+        <p>Mean feature vector representation (left) & similarity within 2D space (right):</p>
+        <img src="portfolio_assets/week-10/visualisations/mean_feature_vector_representation.png" width="40%"><img src="portfolio_assets/week-10/visualisations/similarity_c_and_a.png" width="40%">
+        
+        <hr>
+
+        <h2>Polyphonic Transcription</h2>
+        <p class="task">Open your piece of music from Week 2 in MuseScore. Export it as a WAV file and as an image file.</p>
+        <p>Original track:</p>
+        <audio controls>
+            <source src="portfolio_assets/week-10/transcription/original-piece.wav" type="audio/wav">
+            Your browser does not support this audio element.
+        </audio>
+        <p>Image of score:</p>
+        <img src="portfolio_assets/week-10/transcription/original-piece.png" width="500">
+        <p class="task">Open the WAV file in SonicVisualizer. Export a Polyphonic Transcription.</p>
+        <p>Polyphonic transcription:</p>
+        <audio controls>
+            <source src="portfolio_assets/week-10/transcription/polyphonic_transcription.wav" type="audio/wav">
+            Your browser does not support this audio element.
+        </audio>
+        <p>Image of transcription:</p>
+        <img src="portfolio_assets/week-10/transcription/polyphonic_transcription.png" width="500">
+        <p class="task">Compare the transcription to the original, reflecting on its accuracy and identifying any information that has been lost.</p>
+        <p>TODO: That.</p>
 
     </section>
     
