Download link fix

--- a/week3.html
+++ b/week3.html
@@ -76,8 +76,8 @@
                 });
         </script>
 
-        <p>Download the MEI file <a href="portfolio_assets/week-3/week-3-quartet.mei">here</a>.</p>
-        <p>Download the MusicXML file <a href="portfolio_assets/week-3/week-3-quartet.musicxml">here</a>.</p>
+        <p>Download the MEI file <a href="portfolio_assets/week-3/week-3-quartet.mei" download target="_blank">here</a>.</p>
+        <p>Download the MusicXML file <a href="portfolio_assets/week-3/week-3-quartet.musicxml" download target="_blank">here</a>.</p>
 
         <hr>
 
