--- a/week5.html
+++ b/week5.html
@@ -91,7 +91,7 @@
                 });
         </script>
 
-        <p>Download the MEI file <a href="portfolio_assets/week-5/week-5-quartet.mei" download>here</a>.</p>
+        <p>Download the MEI file <a href="portfolio_assets/week-5/week-5-quartet.mei" download target="_blank">here</a>.</p>
 
     </section>
     
