--- a/week2.html
+++ b/week2.html
@@ -54,7 +54,7 @@
 
         <h2>Converting a PDF to Musescore</h2>
         <p class="task">Identify a piece of music to download and edit.</p>
-        <p>Beethoven's String Quartet No. 4 (Op. 18 No. 4), <a href="https://imslp.org/wiki/Special:ReverseLookup/21518">click here</a> to view.</p>
+        <p>Beethoven's String Quartet No. 4 (Op. 18 No. 4), click <a href="https://imslp.org/wiki/Special:ReverseLookup/21518" target="_blank">here</a> to view in IMSLP.</p>
         <p class="task">Download the PDF and then convert it to MuseScore. Edit at least 10 bars in MuseScore.</p>
         <p>Edited MuseScore file:</p>
         <img src="portfolio_assets/week-2/converted.png" width="500">
