Minor spelling/wording changes

--- a/week10.html
+++ b/week10.html
@@ -72,7 +72,7 @@
         <hr>
 
         <h2>Polyphonic Transcription</h2>
-        <p class="task">Open your piece of music from Week 2 in MuseScore. Export it as a WAV file and as an image file.</p>
+        <p class="task">Open your piece of music from Week 2 in Musescore. Export it as a WAV file and as an image file.</p>
         <p>Original track:</p>
         <audio controls>
             <source src="portfolio_assets/week-10/transcription/original-piece.wav" type="audio/wav">
