--- a/week2.html
+++ b/week2.html
@@ -55,10 +55,10 @@
         <h2>Converting a PDF to Musescore</h2>
         <p class="task">Identify a piece of music to download and edit.</p>
         <p>Beethoven's String Quartet No. 4 (Op. 18 No. 4), click <a href="https://imslp.org/wiki/Special:ReverseLookup/21518" target="_blank">here</a> to view in IMSLP.</p>
-        <p class="task">Download the PDF and then convert it to MuseScore. Edit at least 10 bars in MuseScore.</p>
-        <p>Edited MuseScore file:</p>
+        <p class="task">Download the PDF and then convert it to Musescore. Edit at least 10 bars.</p>
+        <p>Edited Musescore file:</p>
         <img src="portfolio_assets/week-2/converted.png" width="500">
-        <p>Download the file <a href="portfolio_assets/week-2/musescore_file.mscz" download>here</a>.</p>
+        <p>Download the Musescore file <a href="portfolio_assets/week-2/musescore_file.mscz" download>here</a>.</p>
 
         <p>Some of the changes needed:</p>
         <ul>
