--- a/week5.html
+++ b/week5.html
@@ -53,7 +53,7 @@
         <h2 class="page_subtitle">Week 5</h2>
 
         <h2>Create Metadata Schema</h2>
-        <p class="task">Create a metadata schema by listing the elements (or a subset of at least 5 elements) that your group chose back on Tuesday.</p>
+        <p class="task">Create a metadata schema by listing elements (at least 5).</p>
         <p>Chosen Elements:</p>
         <ul>
             <li>Title</li>
@@ -68,7 +68,7 @@
         <hr>
 
         <h2>Add Metadata to MEI File</h2>
-        <p class="task">Modify your MEI document according to the schema that you have created. Where possible, enrich your data by linking it to existing authorities as discussed in yesterday&quot;s lecture using the @auth.uri attribute.</p>
+        <p class="task">Modify your MEI document according to the schema that you have created. Where possible, enrich your data by linking it to existing authorities the @auth.uri attribute.</p>
 
         <div id="app">Verovio is loading...</div>
         <script type="module">
