--- a/week8.html
+++ b/week8.html
@@ -55,7 +55,7 @@
         <h2>Finding Audio</h2>
         <p class="task">Identify and download 3 music tracks relating to your theme. Ideally, these should be different in their sound and style.</p>
 
-        <p>Below are three performances of the first movement of Beethoven's String Quartet No. 4.</p>
+        <p>Below are three different performances of the first movement of Beethoven's String Quartet No. 4.</p>
         <p>Track 1 - Dover Quartet:</p>
         <audio controls>
             <source src="portfolio_assets/week-8/dover/dover.mp3" type="audio/mpeg">
@@ -155,7 +155,7 @@
         <hr>
 
         <h2>Performing Audio Analysis</h2>
-        <p class="task">For each downloaded track, generate a spectrogram (with log-spaced frequency scale) in SonicVisualizer. Export the waveform and spectrogram in an image format for your GitHub portfolio.</p>
+        <p class="task">For each downloaded track, generate a spectrogram (with log-spaced frequency scale) in SonicVisualizer. Export the waveform and spectrogram in an image format.</p>
 
         <h3>Dover Quartet</h3>
         <p>Waveform:</p>
