--- a/week9.html
+++ b/week9.html
@@ -53,12 +53,12 @@
         <h2 class="page_subtitle">Week 9</h2>
 
         <h2>Extracting Features</h2>
-        <p class="task">For each track, load and add 3 panes. One should be a Spectrogram, one a Mel Frequency Cepstral Coefficients, and one a Chromagram. Take a screenshot of the panes. Save the three annotation layers as individual CSV files (i.e. the raw data).</p>
+        <p class="task">For each track, load and add 3 panes. One should be a Spectrogram, one a Mel Frequency Cepstral Coefficients (MFCCs), and one a Chromagram. Take a screenshot of the panes. Save the three annotation layers as individual CSV files (i.e. the raw data).</p>
 
         <h3>Dover Quartet</h3>
         <p>Spectrogram (<a href="portfolio_assets/week-9/dover/dover_spectrogram.csv">download CSV</a>):</p>
         <img src="portfolio_assets/week-9/dover/dover_spectrogram.png" width="90%">
-        <p>Mel Frequency Cepstral Coefficients (MFCCs) (<a href="portfolio_assets/week-9/dover/dover_mfcc.csv">download CSV</a>):</p>
+        <p>MFCCs (<a href="portfolio_assets/week-9/dover/dover_mfcc.csv">download CSV</a>):</p>
         <img src="portfolio_assets/week-9/dover/dover_mfcc.png" width="90%">
         <p>Chromagram (<a href="portfolio_assets/week-9/dover/dover_chromagram.csv">download CSV</a>):</p>
         <img src="portfolio_assets/week-9/dover/dover_chromagram.png" width="90%">
