Add homepage banner

--- a/index.html
+++ b/index.html
@@ -49,8 +49,7 @@
     <!-- Page content -->
     <section class="content">
 
-        <h1 class="page_title">Music Curation & Analytics</h1>
-        <h2 class="page_subtitle">Home</h2>
+        <img class="banner" src="site_assets/images/banner.png" width="100%">
 
         <h2>Introduction</h2>
         <p>Welcome to my portfolio for Music Curation & Analytics 2022! Use the menu on the right to navigate between lab weeks &#128073;</p>
