little tiny changes

--- a/week3.html
+++ b/week3.html
@@ -87,7 +87,7 @@
         <p>Where MusicXML and MEI share many differences, such as both being written in the XML format, the two formats differ as they were designed and built upon different primary purposes. Where MusicXML exists as an interchange between different proprietary notation software formats, focusing on western notational accuracy, MEI emphasises human readability through its structure, and extensive coverage of content outside of notation alone.</p>
         <p>The differing philosophies of the formats can be exemplified by the differences in their file structure.</p>
 
-        <p>Note Elements:</p>
+        <h3>Note Elements</h3>
         <ul>
           <li>
             MusicXML structures notes as parent elements containing properties within nested child elements.
@@ -107,7 +107,7 @@
           </li>
         </ul>
 
-        <p>Time Signature:</p>
+        <h3>Time Signature</h3>
         <ul>
           <li>
             In MusicXML, time signatures are represented by a &lt;time&gt; element.
@@ -124,7 +124,7 @@
           </li>
         </ul>
 
-        <p>Parts List:</p>
+        <h3>Parts List</h3>
         <ul>
           <li>
             In MusicXML, the parts list is defined within the &lt;part-list&gt; element.
