--- a/week4.html
+++ b/week4.html
@@ -60,12 +60,10 @@
 
         <h2>Analyse Feature Values</h2>
         <p class="task">Generate a piano roll and pitch histogram of your piece using music21.</p>
-        <p>Generated Piano Roll:</p>
-        <img src="portfolio_assets/week-4/piano_roll.png" width="500">
-        <p>Generated Pitch Histogram:</p>
-        <img src="portfolio_assets/week-4/pitch_histogram.png" width="500">
-        
-
+        <p>Generated piano roll (left) & pitch histogram (right):</p>
+        <img src="portfolio_assets/week-4/piano_roll.png" width="40%"><img src="portfolio_assets/week-4/pitch_histogram.png" width="40%">
+        <p>Scatter plot of pitches:</p>
+        <img src="portfolio_assets/week-4/scatter_plot_pitches.png" width="500">
 
     </section>
     
