Completed some missing information

--- a/week1.html
+++ b/week1.html
@@ -58,7 +58,7 @@
 
         <iframe width="560" height="315" src="https://www.youtube.com/embed/XQ-oZvbdwxA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
-        <p>Specifically, the focus will be on the first movement of this piece.</p>
+        <p>Specifically, the focus will be on the first movement of this piece, and the comparison between difference performances.</p>
 
         <hr>
 
@@ -97,7 +97,8 @@
         </ul>
 
         <p class="task">Describe the current manifestations of data relating to your selected theme, discussing how it is presently curated (collected and gathered) and how it is presented, described, and analysed.</p>
-        <p>TODO: Describe the current manifestations of data relating to your selected theme, discussing how it is presently curated (collected and gathered) and how it is presented, described, and analysed.</p>
+        <p>For Beethoven&apos;s fourth string quartet, there exists a rich and diverse of set of performances, scores, and recordings, as well as plenty of information about the piece itself. As a well-known piece of classical music, there are many different performances and recordings in many different formats such as video and audio recordings. As a piece of music in the public domain, scores of all different varieties can be found both online as well as in physical form (e.g. in libraries, music collections).</p>
+        <p>To gather these different manifestations, one can visit one of many online sites where PDF versions of scores, or audio/video files of performances can be viewed and/or downloaded. Alternatively, visiting a library can also offer both physical scores as well as CDs/tapes/records of recordings.</p>
 
     </section>
 
