--- a/week5.html
+++ b/week5.html
@@ -56,13 +56,12 @@
         <p class="task">Create a metadata schema by listing elements (at least 5).</p>
         <p>Chosen Elements:</p>
         <ul>
-            <li>Title</li>
+            <li>Title of Piece</li>
+            <li>Opus Number (if any)</li>
             <li>Author/Composer</li>
-            <li>Year Produced/Composed</li>
-            <li>Key</li>
-            <li>Tempo</li>
-            <li>Encoder</li>
-            <li>Transcriber</li>
+            <li>Date Encoded</li>
+            <li>Encoder (if any)</li>
+            <li>Transcriber (if any)</li>
         </ul>
 
         <hr>
