--- a/week8.html
+++ b/week8.html
@@ -93,7 +93,7 @@
             <tr>
                 <th>Artist(s)</th>
                 <td>Dover Quartet</td>
-                <td>Emerson Quartet</td>
+                <td>Emerson String Quartet</td>
                 <td>Sumina Studer (Violin), Clara Chartré (Violin), Caroline (Viola), Clément Dami (Cello)</td>
             </tr>
             <tr>
@@ -116,9 +116,9 @@
             </tr>
             <tr>
                 <th>Source</th>
-                <td>https://www.youtube.com/watch?v=vn3OdaQtSNY</td>
-                <td>https://www.youtube.com/watch?v=xT56FWW34_U</td>
-                <td>https://www.youtube.com/watch?v=IoP_sTj7pFY</td>
+                <td>YouTube (<a href="https://www.youtube.com/watch?v=vn3OdaQtSNY" target="_blank">link</a>)</td>
+                <td>YouTube (<a href="https://www.youtube.com/watch?v=xT56FWW34_U" target="_blank">link</a>)</td>
+                <td>YouTube (<a href="https://www.youtube.com/watch?v=IoP_sTj7pFY" target="_blank">link</a>)</td>
             </tr>
             <tr>
                 <th>Audio Format</th>
@@ -176,8 +176,16 @@
         <hr>
 
         <h2>Comparing Analysis Methods</h2>
-        <p class="task">In 200 words (max), describe at least one advantage of a time-frequency analysis over a waveform-based analysis. Provide at least one example of the identified advantage by referencing a specific subpart of the output from step 1.</p>
-        <p>TODO: That.</p>
+        <p class="task">Describe at least one advantage of a time-frequency analysis over a waveform-based analysis. Provide at least one example of the identified advantage by referencing a specific subpart of the previous output.</p>
+        <p>Where waveforms can represent the shape, form, and magnitude of an audio wave at a given point, time-frequency representations can reveal the harmonic structure of a sound, as well as exactly what frequencies these occur in. One possible observation could be the specific frequencies or notes that are most prominent in a given time frame (like what chord is playing at a given bar of music). From this, the key of the piece could be deduced from identifying the most common notes.</p>
+        <p>Another advantage of time-frequency analysis is the ability to more clearly distinguish the rhythmic qualities of a section of music.</p>
+        <h3>A Visual Example</h3>
+        <p>Below is a small section from the Dover Quartet performance. The upper part is the waveform of the phrase, and the lower part is a spetrogram, which is one example of a time-frequency representation of sound.</p>
+        <img src="portfolio_assets/week-8/example.png" width="400">
+        <ul>
+            <li>In this subpart, the spectrogram more clearly shows the note-lengths. Where in the waveform, the rhythm is still distinguishable, but not as clear where one note ends and another begins. This is very obvious in the spetrogram.</li>
+            <li>Also identifiable in this example is how time-frequency analysis can show the harmonic structure of a given tone. Here, the fundamental frequencies are the most prominent, with the ascending harmonics steadily diminishing upwards.</li>
+        </ul>
 
     </section>
     
