More to-do's completed

--- a/week8.html
+++ b/week8.html
@@ -157,17 +157,17 @@
         <h2>Performing Audio Analysis</h2>
         <p class="task">For each downloaded track, generate a spectrogram (with log-spaced frequency scale) in SonicVisualizer. Export the waveform and spectrogram in an image format.</p>
 
-        <h3>Dover Quartet</h3>
+        <h3>Excerpt of Dover Quartet</h3>
         <p>Waveform:</p>
         <img src="portfolio_assets/week-8/dover/dover_waveform.png" width="90%">
         <p>Spectrogram:</p>
         <img src="portfolio_assets/week-8/dover/dover_spectrogram.png" width="90%">
-        <h3>Emerson Quartet</h3>
+        <h3>Excerpt of Emerson Quartet</h3>
         <p>Waveform:</p>
         <img src="portfolio_assets/week-8/emerson/emerson_waveform.png" width="90%">
         <p>Spectrogram:</p>
         <img src="portfolio_assets/week-8/emerson/emerson_spectrogram.png" width="90%">
-        <h3>Menuhin Competition</h3>
+        <h3>Excerpt of Menuhin Competition</h3>
         <p>Waveform:</p>
         <img src="portfolio_assets/week-8/menuhin/menuhin_waveform.png" width="90%">
         <p>Spectrogram:</p>
@@ -180,7 +180,7 @@
         <p>Where waveforms can represent the shape, form, and magnitude of an audio wave at a given point, time-frequency representations can reveal the harmonic structure of a sound, as well as exactly what frequencies these occur in. One possible observation could be the specific frequencies or notes that are most prominent in a given time frame (like what chord is playing at a given bar of music). From this, the key of the piece could be deduced from identifying the most common notes.</p>
         <p>Another advantage of time-frequency analysis is the ability to more clearly distinguish the rhythmic qualities of a section of music.</p>
         <h3>A Visual Example</h3>
-        <p>Below is a small section from the Dover Quartet performance. The upper part is the waveform of the phrase, and the lower part is a spetrogram, which is one example of a time-frequency representation of sound.</p>
+        <p>Below is a small section from the Dover Quartet performance. The upper part is the waveform of the phrase, and the lower part is a spectrogram, one example of time-frequency sound representation.</p>
         <img src="portfolio_assets/week-8/example.png" width="400">
         <ul>
             <li>In this subpart, the spectrogram more clearly shows the note-lengths. Where in the waveform, the rhythm is still distinguishable, but not as clear where one note ends and another begins. This is very obvious in the spetrogram.</li>
