Change bottom navigation

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     
     <!-- Next/previous page bar -->
     <div class="bottom-nav">
-        <a href="week1.html" id="next-week">Basics of Music Data &gt;</a>
+        <a href="week1.html" id="next-week">Week 1 &gt;</a>
     </div>
     <br>
 
