--- a/week1.html
+++ b/week1.html
@@ -105,7 +105,7 @@
     <!-- Next/previous page bar -->
     <div class="bottom-nav">
         <a href="index.html" id="previous-week">&lt; Home</a>
-        <a href="week2.html" id="next-week">Notation Basics &gt;</a>
+        <a href="week2.html" id="next-week">Week 2 &gt;</a>
     </div>
     <br>
 
