--- a/week10.html
+++ b/week10.html
@@ -99,7 +99,7 @@
     
     <!-- Next/previous page bar -->
     <div class="bottom-nav">
-        <a href="week9.html" id="previous-week">&lt; Analysing & Extracting Meaning from Audio</a>
+        <a href="week9.html" id="previous-week">&lt; Week 9</a>
     </div>
     <br>
 
