--- a/week2.html
+++ b/week2.html
@@ -72,8 +72,8 @@
 
     <!-- Next/previous page bar -->
     <div class="bottom-nav">
-        <a href="week1.html" id="previous-week">&lt; Basics of Music Data</a>
-        <a href="week3.html" id="next-week">Encoding Basics for Notation &gt;</a>
+        <a href="week1.html" id="previous-week">&lt; Week 1</a>
+        <a href="week3.html" id="next-week">Week 3 &gt;</a>
     </div>
     <br>
 
