--- a/week3.html
+++ b/week3.html
@@ -148,8 +148,8 @@
     
     <!-- Next/previous page bar -->
     <div class="bottom-nav">
-        <a href="week2.html" id="previous-week">&lt; Notation Basics</a>
-        <a href="week4.html" id="next-week">Computational Analysis of Notated Music &gt;</a>
+        <a href="week2.html" id="previous-week">&lt; Week 2</a>
+        <a href="week4.html" id="next-week">Week 4 &gt;</a>
     </div>
     <br>
 
