--- a/week4.html
+++ b/week4.html
@@ -69,8 +69,8 @@
     
     <!-- Next/previous page bar -->
     <div class="bottom-nav">
-        <a href="week3.html" id="previous-week">&lt; Encoding Basics for Notation</a>
-        <a href="week5.html" id="next-week">Standards in Curation &gt;</a>
+        <a href="week3.html" id="previous-week">&lt; Week 3</a>
+        <a href="week5.html" id="next-week">Week 5 &gt;</a>
     </div>
     <br>
 
