--- a/week7.html
+++ b/week7.html
@@ -126,8 +126,8 @@
     
     <!-- Next/previous page bar -->
     <div class="bottom-nav">
-        <a href="week5.html" id="previous-week">&lt; Standards in Curation</a>
-        <a href="week8.html" id="next-week">Music as Sound &gt;</a>
+        <a href="week5.html" id="previous-week">&lt; Week 5</a>
+        <a href="week8.html" id="next-week">Week 8 &gt;</a>
     </div>
     <br>
 
