--- a/week8.html
+++ b/week8.html
@@ -191,8 +191,8 @@
     
     <!-- Next/previous page bar -->
     <div class="bottom-nav">
-        <a href="week7.html" id="previous-week">&lt; Challenges to Music Curation</a>
-        <a href="week9.html" id="next-week">Analysing & Extracting Meaning from Audio &gt;</a>
+        <a href="week7.html" id="previous-week">&lt; Week 7</a>
+        <a href="week9.html" id="next-week">Week 9 &gt;</a>
     </div>
     <br>
 
