--- a/week9.html
+++ b/week9.html
@@ -146,8 +146,8 @@
     
     <!-- Next/previous page bar -->
     <div class="bottom-nav">
-        <a href="week8.html" id="previous-week">&lt; Music as Sound</a>
-        <a href="week10.html" id="next-week">Audio Similarity & Transcription &gt;</a>
+        <a href="week8.html" id="previous-week">&lt; Week 8</a>
+        <a href="week10.html" id="next-week">Week 10 &gt;</a>
     </div>
     <br>
 
