--- a/week5.html
+++ b/week5.html
@@ -96,8 +96,8 @@
     
     <!-- Next/previous page bar -->
     <div class="bottom-nav">
-        <a href="week4.html" id="previous-week">&lt; Computational Analysis of Notated Music</a>
-        <a href="week7.html" id="next-week">Challenges to Music Curation &gt;</a>
+        <a href="week4.html" id="previous-week">&lt; Week 4</a>
+        <a href="week7.html" id="next-week">Week 7 &gt;</a>
     </div>
     <br>
 
