Minor style changes, remove unused fonts

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <link rel="stylesheet" href="site_assets/styles/styles_main.css">
     <link rel="shortcut icon" href="site_assets/images/icon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Amatic+SC|Bebas+Neue|Julius+Sans+One|Open+Sans|Roboto+Condensed&display=swap">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Bebas+Neue|Julius+Sans+One|Open+Sans&display=swap">
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
     <script src="site_assets/scripts/scripts_main.js"></script>
