More minor page changes

--- a/week1.html
+++ b/week1.html
@@ -96,6 +96,9 @@
             <li>Quartet: Metadata for the suite can have great variation depending on the source - orchestral/chamber music generally offers a large amount of creative freedom to the conductor/performers of a performance and properties such as tempo & dynamics can be largely up to interpretation. This results in fluctuations in metadata for the same piece - which can make it challenging to determine or analyse the piece objectively.</li>
         </ul>
 
+        <hr>
+
+        <h2>Current Data Manifestations</h2>
         <p class="task">Describe the current manifestations of data relating to your selected theme, discussing how it is presently curated (collected and gathered) and how it is presented, described, and analysed.</p>
         <p>For Beethoven&apos;s fourth string quartet, there exists a rich and diverse of set of performances, scores, and recordings, as well as plenty of information about the piece itself. As a well-known piece of classical music, there are many different performances and recordings in many different formats such as video and audio recordings. As a piece of music in the public domain, scores of all different varieties can be found both online as well as in physical form (e.g. in libraries, music collections).</p>
         <p>To gather these different manifestations, one can visit one of many online sites where PDF versions of scores, or audio/video files of performances can be viewed and/or downloaded. Alternatively, visiting a library can also offer both physical scores as well as CDs/tapes/records of recordings.</p>
