--- a/week10.html
+++ b/week10.html
@@ -88,12 +88,17 @@
         </audio>
         <p>Image of transcription:</p>
         <img src="portfolio_assets/week-10/transcription/polyphonic_transcription.png" width="500">
+
+        <hr>
+
+        <h2>Transcription Analysis</h2>
         <p class="task">Compare the transcription to the original, reflecting on its accuracy and identifying any information that has been lost.</p>
         <p>The polyphonic transcription maintains some of the properties of the original MIDI render, including some correct chords and harmonies. The length of the transcription&apos;s output audio file was also similar to the original clip.</p>
         <p>However, the transcription was unable to accurately capture the correct time signature of the original, transcribing the clip as 3/4 instead of common time. The output audio file is the same length as the original, though the note-length values were not accurate. The rhythm also had some issues, such as the first few bars in the original being transcribed as one large chord which spanned two bars.</p>
-        <p>The stacatto part of the clip near the end was somewhat preserved in the transcription, although not entirely accurately.</p>
+        <p>The staccato part of the clip near the end was somewhat preserved in the transcription, although this was not entirely accurately.</p>
         <p>Additionally, the transcription seemed to pick up some harmonics and sub-harmonics as actual notes, resulting in many extremely high and extremely low notes being transcribed.</p>
         <p>A fair amount of information present in the original was lost, such as information on the title, composer, and instrumentation, as well as dynamic and articulation markings (although some articulation was preserved such as some stacatto marks).</p>
+        <p>Listening to the two clips, there are some similarities in the harmonic and rhythmic structure, although these are ultimately overwhelmed by the inaccuacies and discrepancies found in the polyphonic transcription.</p>
 
     </section>
     
