--- a/week7.html
+++ b/week7.html
@@ -59,7 +59,7 @@
 
         <h2>Update & Render Metadata</h2>
         <p class="task">Create a second version of your MEI file with the updated metadata. Render your revised MEI metadata along with your score.</p>
-
+        <p>Download the updated MEI file <a href="portfolio_assets/week-7/week-7-quartet.mei" download>here</a>.</p>
         <br><br>
         <div id="MEImeta"></div>
         <br><br>
