Little tiny week 9 change

--- a/week9.html
+++ b/week9.html
@@ -133,8 +133,7 @@
         <p>Comparing the Chroma Feature histograms, a few differences have been captured:</p>
         <ul>
             <li>Looking at the the levels, the Dover track is significantly louder than both the Emerson and Menuhin tracks. This is displayed by the larger areas that the Dover histogram takes for each feature.</li>
-            <li>The Dover track also has more prominance on the &quot;C&quot; feature (top-left) - this is obvious when listening to the clip, as there is a repeated C bass note in a large part of the clip (especially the beginning).</li>
-            <li></li>
+            <li>The Dover track also has more prominance on the &quot;C&quot; feature (histogram 0/top-left) - this is obvious when listening to the clip, as there is a repeated C bass note in a large part of the clip (especially the beginning).</li>
         </ul>
         <p>However, there are stil many similarities when analysing the Chromagrams of these three tracks:</p>
         <ul>
